--- a/index.html
+++ b/index.html
@@ -6,18 +6,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="./css/styles.min.css">
-    <title>CELLSEARCH VIDEO TUTORIAL</title>
+    <title>TUTORIAL</title>
   </head>
 
   <body>
     <div class="container">
       <!-- Little Header Bar -->
       <div class="header bold">
-        <span>CELLSEARCH System Training Videos Q:A</span>
-        <div class="header-right">
-          <span id="bulkFluidButton">About the Bulk Fluids</span>
-          <span id="attachmentButton">ATTACHMENTS</span>
-        </div>
+        <span>Tutorial</span>
       </div>
 
       <!-- Interactive Content -->
