--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <!-- Little Header Bar -->
       <div class="header bold">
         <span>Tutorial</span>
+        <span>Tutorial</span>
+        <span>Tutorial</span>
+        <span>Tutorial</span>
+        <span>Tutorial</span>
       </div>
 
       <!-- Interactive Content -->
