trying to import nav via json

--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         <div class="nav">
 
           <div class="nav-img">
-            <img src="img/logo-min.png">
+            <img src="img/logo.png">
           </div>
           <span>Outline</span>
 
           <div class="nav-buttons">
+
 
             <div data-target="1" class="on color-blue background"><p>Welcome!</p></div>
             <div data-target="2"><p>Course Objectives</p></div>
@@ -52,7 +53,7 @@
                       <p>CellSearch Circulating Tumor Cell Kit</p>
                     </div>
 
-                    <div data-target="7" data-children="6">
+                    <div data-target="7" data-children="5">
                       <p>Reagent Storage and Handling</p>
                     </div>
 
@@ -63,9 +64,9 @@
               <div data-target="8" data-children="3">
                 <p class="arrow">The CellSearch CTC Control Kit</p>
 
-                <div data-target="9" data-children="8">
-                  <p>CTC Control Kit Storage and Handling</p>
-                </div>
+                  <div data-target="9" data-children="8">
+                    <p>CTC Control Kit Storage and Handling</p>
+                  </div>
 
 
               </div>
