--- a/index.html
+++ b/index.html
@@ -1757,6 +1757,8 @@
 
 
     <!-- JS -->
+    <script type="text/javascript" src="./js/test.js"></script>
+
     <script type="text/javascript" src="./js/utilities.js"></script>
     <script type="text/javascript" src="./js/index.js"></script>
 
