revert to pre confusion, still working to add targets and children data attributes

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
           <div class="nav-buttons">
 
 
-            <div data-target="1" class="on color-blue background"><p>Welcome!</p></div>
-            <div data-target="2"><p>Course Objectives</p></div>
+            <!-- <div data-target="1" class="on color-blue background"><p>Welcome!</p></div>
+            <div data-target="2"><p>Course Objectives</p></div> -->
             <!-- Lesson 1 -->
-            <div data-target="3">
+            <!-- <div data-target="3">
               <p class="arrow">Lesson 1: Overview of the CellSearch System</p>
 
               <div data-target="4" data-children="3">
@@ -77,7 +77,7 @@
 
               <div data-target="12" data-children="3"><p>How the System Works</p></div>
 
-            </div>
+            </div> -->
 
             <!-- Lesson 2 -->
             <div data-target="13">
